--- a/DRMR/DRMR/Base.lproj/Main.storyboard
+++ b/DRMR/DRMR/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -183,10 +183,10 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="176"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Whj-ha-aAH" id="OFu-yH-urx">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="175"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="175.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xpa-Ii-fO5">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xpa-Ii-fO5">
                                                     <rect key="frame" x="8" y="8" width="297.5" height="29"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                     <nil key="textColor"/>
@@ -211,26 +211,26 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GW9-Z4-BX4">
-                                                    <rect key="frame" x="8" y="45" width="278.5" height="54.5"/>
+                                                    <rect key="frame" x="8" y="45" width="278.5" height="57.5"/>
                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oo8-b0-tO1">
-                                                    <rect key="frame" x="8" y="115.5" width="44" height="44"/>
+                                                    <rect key="frame" x="8" y="118.5" width="36" height="36"/>
                                                     <color key="backgroundColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="44" id="m1J-v4-Qv1"/>
-                                                        <constraint firstAttribute="width" constant="44" id="xfv-Ey-0B1"/>
+                                                        <constraint firstAttribute="height" constant="36" id="m1J-v4-Qv1"/>
+                                                        <constraint firstAttribute="width" constant="36" id="xfv-Ey-0B1"/>
                                                     </constraints>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qqk-CD-Jbh">
-                                                    <rect key="frame" x="68" y="115.5" width="44" height="44"/>
+                                                    <rect key="frame" x="68" y="118.5" width="36" height="36"/>
                                                     <color key="backgroundColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="44" id="MFm-ON-ovc"/>
-                                                        <constraint firstAttribute="height" constant="44" id="no0-cd-clC"/>
+                                                        <constraint firstAttribute="width" constant="36" id="MFm-ON-ovc"/>
+                                                        <constraint firstAttribute="height" constant="36" id="no0-cd-clC"/>
                                                     </constraints>
                                                 </button>
                                             </subviews>
@@ -249,7 +249,7 @@
                                                 <constraint firstItem="ahe-CF-ag9" firstAttribute="leading" secondItem="Xpa-Ii-fO5" secondAttribute="trailing" constant="16" id="Tkp-QJ-ezN"/>
                                                 <constraint firstItem="ahe-CF-ag9" firstAttribute="centerX" secondItem="vWF-2N-uQv" secondAttribute="centerX" id="m7D-5T-0vg"/>
                                                 <constraint firstItem="GW9-Z4-BX4" firstAttribute="leading" secondItem="OFu-yH-urx" secondAttribute="leading" constant="8" id="qSe-FJ-M8S"/>
-                                                <constraint firstItem="Qqk-CD-Jbh" firstAttribute="leading" secondItem="oo8-b0-tO1" secondAttribute="trailing" constant="16" id="qg4-i4-wNd"/>
+                                                <constraint firstItem="Qqk-CD-Jbh" firstAttribute="leading" secondItem="oo8-b0-tO1" secondAttribute="trailing" constant="24" id="qg4-i4-wNd"/>
                                                 <constraint firstItem="vWF-2N-uQv" firstAttribute="top" secondItem="ahe-CF-ag9" secondAttribute="bottom" constant="-5" id="rBh-Sa-Y7L"/>
                                                 <constraint firstItem="oo8-b0-tO1" firstAttribute="top" secondItem="GW9-Z4-BX4" secondAttribute="bottom" constant="16" id="x0B-zu-Rie"/>
                                                 <constraint firstItem="GW9-Z4-BX4" firstAttribute="top" secondItem="Xpa-Ii-fO5" secondAttribute="bottom" constant="8" id="yEg-tB-nSk"/>
