--- a/DRMR/DRMR/Base.lproj/Main.storyboard
+++ b/DRMR/DRMR/Base.lproj/Main.storyboard
@@ -126,7 +126,9 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lcY-xJ-vCQ">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <items>
-                                    <barButtonItem title="Item" id="bpT-0K-AGE"/>
+                                    <barButtonItem title="Favorite" id="ukm-ME-IrY"/>
+                                    <barButtonItem systemItem="flexibleSpace" id="0Sg-Jc-Dg1"/>
+                                    <barButtonItem systemItem="action" id="bpT-0K-AGE"/>
                                 </items>
                             </toolbar>
                         </subviews>
